# otus_1_2_ip_filter

./: .gitignore  .travis — копия.txt  .travis.yml  CMakeLists.txt  README.md  ip_list.tsv
.github/workflows/: build_cmake.yml  github-actions-demo.yml
libs/: CMakeLists.txt  ip_filter.cpp  ip_filter.h
libs/include/: ip_filter.h
libs/src/: ip_filter.cpp
main/: CMakeLists.txt  main.cpp
otus_1_2_ip_filter/: .travis.yml  build_number.h
otus_1_2_ip_filter/libs/: CMakeLists.txt
otus_1_2_ip_filter/libs/src/: ip_filter.cpp
test/: CMakeLists.txt  CMakeLists_old.txt
test/test_ip_filter/: CMakeLists.txt  CMakeLists_old.txt  test_ip_filter.cpp
